# pyro-platform

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  acme.json  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pyro-platform.code-workspace  requirements.txt  traefik.toml
.github/: validate_headers.py
.github/workflows/: build.yml  docker.yml  docker_publish.yaml  main.yml  push.yml  pythonpackage.yml  requirements.yml  style.yml  tests.yml
app/: __init__.py  alert_screen.py  alerts.py  app.py  config.py  dashboard_screen.py  graphs.py  homepage.py  index.py  logging_config.py  main.py  navbar.py  repro_bug_api.ipynb  risks.py  site_devices.json  translations.py  utils.py
app/assets/: styles.css
app/assets/css/: style.css  styles.css
app/assets/data/: group_correspondences.json  historic_fires.csv
app/assets/js/: zoomable_image.js
app/callbacks/: data_callbacks.py  display_callbacks.py  export_callbacks.py  live_callbacks.py
app/components/: alerts.py  detections.py  navbar.py
app/data/: .~lock.cameras.csv#  cameras.csv  historic_fires.csv  login_correspondences.enc  risk.json
app/layouts/: main_layout.py
app/pages/: blinking_alarm.py  cameras_status.py  device_status.py  export.py  history.py  homepage.py  live_stream.py  login.py  minimal.py  risks.py  screen.py
app/services/: __init__.py  api.py
app/utils/: _utils.py  alerts.py  data.py  display.py  live_stream.py  sites.py  telemetry.py
pyronear-webapp/: alerts.py  app.py  homepage.py  index.py  navbar.py  risks.py  utils.py
src/: utils.py
test/: test_headers.py
tests/: app_test.py
