[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyro-platform"
version = "0.1.2.dev0"
description = "Monitoring platform for wildfire alerts"
authors = ["Pyronear <contact@pyronear.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
dash = ">=2.14.0"
dash-bootstrap-components = ">=1.5.0"
dash-leaflet = "^0.1.4"
dash-extensions= ">=2.0.4"
pandas = ">=2.1.4"
pyroclient = { git = "https://github.com/pyronear/pyro-api.git", branch = "main", subdirectory = "client" }
python-dotenv = ">=1.0.0"
geopy = ">=2.4.0"
sentry-sdk = { version = "^1.5.12", extras = ["flask"] }
timezonefinder = ">=6.2.0"
pytz = ">=2023.3.post1"
boto3 = "==1.26.158"
botocore = "==1.29.158"
opencv-python-headless = ">=4.0.0"

[tool.poetry.group.quality]
optional = true

[tool.poetry.group.quality.dependencies]
ruff = "==0.1.2"
mypy = "==1.8.1"
types-requests = ">=2.0.0"
pandas-stubs = ">=1.5.2"
pre-commit = "^2.17.0"

[tool.ruff]
select = [
    "E", "W",
    "D201", "D202", "D207", "D208", "D214", "D215", "D300", "D301", "D419",
    "F", "I", "C", "B", "CPY001", "ISC", "PYI", "NPY", "PERF", "RUF"
]
ignore = [
    "E501", "B008", "B904", "C901", "F403", "E731", "C416"
]
extend-ignore = ["E111", "E114", "E117", "ISC001", "W191"]
exclude = [".git"]
line-length = 120
target-version = "py311"
preview = true

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001"]
".github/**.py" = ["D"]
"app/index.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["config", "pages", "components", "utils", "services"]

[tool.mypy]
python_version = "3.11"
mypy_path = "app/"
files = "app/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "dash.*",
    "dash_table.*",
    "dash_leaflet.*",
    "dash_bootstrap_components.*",
    "dash_html_components.*",
    "dash_core_components.*",
    "geopy.*",
    "pyroclient.*",
    "flask_caching.*",
]
ignore_missing_imports = true
